added temp work term 1 link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Work in Progress</title>
   </head>
   <body>
+    <a href="WorkTerm1/index.html">Work Term 1: Camis</a>
+    
     <div class="card work_term_header" data-toggle="collapse" data-target="#demo">
       Work Term 1: <b>Camis</b>
     </div>
