Fixed typos and assed collapsing

--- a/index.html
+++ b/index.html
@@ -19,33 +19,37 @@
     <div class="container-fluid row">
       <div class="col-2"></div>
       <div class="col-8" >
+        <br/>
+        <i>(Click the header to expand the section)</i>
         <div class="section">
           <div class ="row">
-            <div class="section_header section_header_v1 col-3">
+            <div class="section_header section_header_v1 col-3" data-toggle="collapse" data-target="#abstract_body">
               Abstract
             </div>
           </div>
-          <div class="section_body">
+          <div class="section_body collapse" id="abstract_body">
             <p>
-              This website is about my first co-op work term: the company, my experience on the job, and most importantly, the goals I had going in and the skills I took away. By reading this website, I hope you, the reader, learn something about my experience at Camis, and hopefully even get inspired to figure out what you might want to take away from your future endeavors.
+              This website is about my (Ryan Stamp's) first co-op work term: the company, my experience on the job, and most importantly, the goals I had going in and the skills I took away. By reading this website, I hope you, the reader, learn something about my experience at Camis, and hopefully even get inspired to figure out what you might want to take away from your future endeavors.
             </p>
           </div>
         </div>
         <div class="section">
           <div class ="row">
-            <div class="section_header section_header_v2 col-3">
+            <div class="section_header section_header_v2 col-3" data-toggle="collapse" data-target="#camis_body">
               About Camis
             </div>
           </div>
-          <div class="section_body">
+          <div class="section_body collapse" id="camis_body">
             <span class="sub_section_header">Company and Products</span>
             <p>
-              Camis is a company that makes reservation and accommodation software for campgrounds. Their clients consist of almost every province in Canada and even also have a few American clients. For a full list, visit <a href="http://goingtocamp.com/">goingtocamp.com.<a/> Camis’ main product is the reservation software, but also provides hardware and a call centre to clients as well. The software has gone through many versions, from the older “Everest” software to the new Camis 5. The software itself takes many forms and UIs, but the main ones being the desktop applications for in park and call centre use and the website that campers interact with directly.
+              Camis is a company that makes reservation and accommodation software for campgrounds. Their clients consist of almost every province in Canada and even also have a few American clients. For a full list, visit 
+              <a href="http://goingtocamp.com/">goingtocamp.com.<a/> 
+              Camis’ main product is the reservation software, but also provides hardware and a call centre to clients as well. The software has gone through many versions, from the older “Everest” software to the new Camis 5. The software itself takes many forms and UIs, but the main ones being the desktop applications for in park and call centre use and the website that campers interact with directly.
             </p>
 
             <span class="sub_section_header">Locations</span>
             <p>
-              Camis’ main office is in Guelph, but also have a few offices in the states.
+              Camis’ main office is in Guelph, but they also have a few offices in the states, those being in Ann Arbor and Cumberland.
             </p>
 
             <span class="sub_section_header">Culture and People</span>
@@ -56,11 +60,11 @@
         </div>
         <div class="section">
           <div class ="row">
-            <div class="section_header section_header_v1 col-3">
+            <div class="section_header section_header_v1 col-3" data-toggle="collapse" data-target="#job_body">
               Job Description
             </div>
           </div>
-          <div class="section_body">
+          <div class="section_body collapse" id="job_body">
             <span class="sub_section_header">Job Overview</span>
             <p>
               My job at Camis consisted mostly of fixing bugs in the older Everest software, in a verity of the UIs. My job also consisted of a large amount of configuration for the confirmation letters and business rules for the various parks, especially during the month of July. In this month we worked hard for Parks Canada’s upcoming release, where a lot of new campgrounds were added to the software. Most of the fixes took place in the code, written primarily in C#, but I occasionally had to dive into the database to fix SQL related issues and even writing a stored procedure from scratch towards the end.
@@ -77,18 +81,18 @@
         </div>
         <div class="section">
           <div class ="row">
-            <div class="section_header section_header_v2 col-3">
+            <div class="section_header section_header_v2 col-3" data-toggle="collapse" data-target="#goals_body">
               Learning Goals
             </div>
           </div>
-          <div class="section_body">
+          <div class="section_body collapse" id="goals_body">
             <span class="sub_section_header">Learning Goal 1</span>
             <p>
               My first goal of this work term was to improve my debugging skills. This goal was mainly inspired by the majority of my work, which consisted of debugging. Through the use of Visual Studio’s vast toolset of debugging options, I quickly found myself decreasing the time I spent of tickets, even occasionally completing them under their estimate. Although this goal was created mostly for this job, the benefits of it extend well beyond it. Debugging is an essential part of any programming career and the efficiency with debugging I developed through my time at Camis will in no doubt be of use far into the future.
             </p>
             <span class="sub_section_header">Learning Goal 2</span>
             <p>
-              My second goal was to gain experience with the many new software tools I used at Camis, primary TFS and SQL Server. Of all my goals, this was the one I felt I completed the least. Although I did get much better at using the software, I only really got to use the features that were part of my specific task. For example, I did get familiar with the Visual Studio’s TFS integration, but I never touched the actual TFS server itself or got to learn all the features it was capable of. I did mention in a previous section that I felt like experience with very specific software is rarely a requirement for jobs, however, it still is experience and can be useful nevertheless. In the future, to better complete this type of goal, I will make sure to go out of my way to better learn the software as a whole and not just learn the few set of features that I would use for my specific tasks.
+              My second goal was to gain experience with the many new software tools I used at Camis, primary TFS and SQL Server. Of all my goals, this was the one I felt I completed the least. Although I did get much better at using the software, I only really got to use the features that were part of my specific task. For example, I did get familiar with Visual Studio’s TFS integration, but I never touched the actual TFS server itself or got to learn all the features it was capable of. I did mention in a previous section that I felt like experience with very specific software is rarely a requirement for jobs, however, it still is experience and can be useful nevertheless. In the future, to better complete this type of goal, I will make sure to go out of my way to better learn the software as a whole and not just learn the few set of features that I would use for my specific tasks.
             </p>
             <span class="sub_section_header">Learning Goal 3</span>
             <p>
@@ -98,11 +102,11 @@
         </div>
         <div class="section">
           <div class ="row">
-            <div class="section_header section_header_v1 col-3">
+            <div class="section_header section_header_v1 col-3" data-toggle="collapse" data-target="#conclusion_body">
               Conclusion
             </div>
           </div>
-          <div class="section_body">
+          <div class="section_body collapse" id="conclusion_body">
             <p>
               For a first work term, or any work term really, Camis was a great experience. I was nervous that I would have a hard time fitting into a work environment, but I was pleasantly surprised with how well I did and how much I learned. Through the completion of my goals and the many skills I learned and improved through the verity of tasks I worked on daily, this work term yielded great experience that will in no doubt be of much use going forward.
             </p>
